force-app/main/default/objects/Lead/fields/HRZ_Country__c.field-meta.xml
<CustomField>
    <fullName>HRZ_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship with Country custom object</description>
    <label>Country</label>
    <referenceTo>HRZ_Country__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>