force-app/main/default/objects/Lead/fields/HRZ_CountryAlpha2Code__c.field-meta.xml
<CustomField>
    <fullName>HRZ_CountryAlpha2Code__c</fullName>
    <description>Alpha2Code of the Country</description>
    <formula>HRZ_Country__r.HRZ_Alpha2Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Alpha2Code</label>
    <type>Text</type>
</CustomField>