force-app/main/default/objects/Lead/fields/HRZ_CountryAlpha3Code__c.field-meta.xml
<CustomField>
    <fullName>HRZ_CountryAlpha3Code__c</fullName>
    <description>Alpha3Code of the associated country</description>
    <formula>HRZ_Country__r.HRZ_Alpha3Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Alpha3Code</label>
    <type>Text</type>
</CustomField>