force-app/main/default/objects/Lead/fields/HRZ_CountryCapital__c.field-meta.xml
<CustomField>
    <fullName>HRZ_CountryCapital__c</fullName>
    <description>Capital of the associated country</description>
    <formula>HRZ_Country__r.HRZ_Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Capital</label>
    <type>Text</type>
</CustomField>