force-app/main/default/objects/Lead/fields/HRZ_CountryRegion__c.field-meta.xml
<CustomField>
    <fullName>HRZ_CountryRegion__c</fullName>
    <description>Region of the associated country</description>
    <formula>HRZ_Country__r.HRZ_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Region</label>
    <type>Text</type>
</CustomField>