force-app/main/default/objects/Lead/fields/HRZ_OwnerSince__c.field-meta.xml
<CustomField>
    <fullName>HRZ_OwnerSince__c</fullName>
    <description>Exactly changed owner time</description>
    <label>Owner Since</label>
    <type>DateTime</type>
</CustomField>